--- a/src/application/Dashbord.fxml
+++ b/src/application/Dashbord.fxml
@@ -1,64 +1,56 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.DashbordController">
    <left>
-      <VBox prefHeight="200.0" prefWidth="100.0" style="-fx-background-color: #242423;" BorderPane.alignment="CENTER">
+      <VBox prefHeight="200.0" prefWidth="170.0" style="-fx-background-radius: 10px;" styleClass="leftmenu" stylesheets="@dashbord_style.css" BorderPane.alignment="CENTER">
          <children>
-            <Pane prefHeight="148.0" prefWidth="100.0" />
-            <Button id="btn1" mnemonicParsing="false" prefHeight="60.0" prefWidth="100.0" styleClass="btn" stylesheets="@dashbord_style.css" text="Button" textFill="WHITE" />
-            <Button id="btn1" mnemonicParsing="false" prefHeight="60.0" prefWidth="100.0" styleClass="btn" stylesheets="@dashbord_style.css" text="Button" textFill="WHITE" />
-            <Button id="btn1" mnemonicParsing="false" prefHeight="60.0" prefWidth="100.0" styleClass="btn" stylesheets="@dashbord_style.css" text="Button" textFill="WHITE" />
-            <Button id="btn1" mnemonicParsing="false" prefHeight="60.0" prefWidth="100.0" styleClass="btn" stylesheets="@dashbord_style.css" text="Button" textFill="WHITE" />
-            <Button id="btn1" mnemonicParsing="false" prefHeight="60.0" prefWidth="100.0" styleClass="btn" stylesheets="@dashbord_style.css" text="Button" textFill="WHITE" />
+            <Pane prefHeight="148.0" prefWidth="100.0">
+               <children>
+                  <ImageView fitHeight="77.0" fitWidth="95.0" layoutX="38.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../../bin/pics/Asset%202.png" />
+                     </image>
+                  </ImageView>
+               </children></Pane>
+            <Button id="btn1" fx:id="dashbord_btn" alignment="BASELINE_LEFT" graphicTextGap="0.0" mnemonicParsing="false" onAction="#dashbord" prefHeight="60.0" prefWidth="170.0" styleClass="btn_leftmenu" stylesheets="@dashbord_style.css" text="Dashbord" textFill="#9c9c9c">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <padding>
+                  <Insets left="30.0" />
+               </padding></Button>
+            <Button id="btn1" fx:id="parts" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#parts" prefHeight="60.0" prefWidth="170.0" styleClass="btn_leftmenu" stylesheets="@dashbord_style.css" text="Parts" textAlignment="CENTER" textFill="#9c9c9c">
+               <opaqueInsets>
+                  <Insets />
+               </opaqueInsets>
+               <padding>
+                  <Insets left="30.0" />
+               </padding></Button>
+            <Button id="btn1" fx:id="Rendez_vous" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#Rendez_vous" prefHeight="60.0" prefWidth="170.0" styleClass="btn_leftmenu" stylesheets="@dashbord_style.css" text="Rendez-vous" textFill="#9c9c9c">
+               <padding>
+                  <Insets left="30.0" />
+               </padding></Button>
+            <Button id="btn1" fx:id="btn4" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#btn4" prefHeight="60.0" prefWidth="170.0" styleClass="btn_leftmenu" stylesheets="@dashbord_style.css" text="btn4" textFill="#9c9c9c">
+               <padding>
+                  <Insets left="30.0" />
+               </padding></Button>
+            <Button id="btn1" fx:id="btn5" alignment="BASELINE_LEFT" mnemonicParsing="false" onAction="#btn5" prefHeight="60.0" prefWidth="170.0" styleClass="btn_leftmenu" stylesheets="@dashbord_style.css" text="btn5" textFill="#9c9c9c">
+               <padding>
+                  <Insets left="30.0" />
+               </padding></Button>
             <VBox prefHeight="155.0" prefWidth="100.0" />
          </children>
       </VBox>
    </left>
    <center>
-      <BorderPane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <right>
-            <VBox prefHeight="200.0" prefWidth="250.0" BorderPane.alignment="CENTER">
-               <children>
-                  <Pane prefHeight="100.0" prefWidth="200.0">
-                     <children>
-                        <Text layoutX="14.0" layoutY="59.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Notification :">
-                           <font>
-                              <Font name="System Bold" size="25.0" />
-                           </font>
-                        </Text>
-                     </children>
-                  </Pane>
-                  <Pane prefHeight="120.0" prefWidth="200.0">
-                     <children>
-                        <Text layoutX="74.0" layoutY="53.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Notification 1">
-                           <font>
-                              <Font size="17.0" />
-                           </font>
-                        </Text>
-                        <Text layoutX="74.0" layoutY="73.0" strokeType="OUTSIDE" strokeWidth="0.0" text="test">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </Text>
-                        <ImageView fitHeight="50.0" fitWidth="50.0" layoutX="14.0" layoutY="35.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@Asset%202@4x.png" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </Pane>
-               </children>
-            </VBox>
-         </right>
-      </BorderPane>
+      <BorderPane fx:id="container" prefHeight="200.0" prefWidth="200.0" styleClass="container" stylesheets="@dashbord_style.css" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
