--- a/src/application/Login.fxml
+++ b/src/application/Login.fxml
@@ -3,12 +3,14 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -36,7 +38,14 @@
                         <PasswordField fx:id="password" layoutX="48.0" layoutY="112.0" prefHeight="30.0" prefWidth="250.0" promptText="Mot de pass" />
                         <HBox alignment="TOP_CENTER" layoutY="168.0" prefHeight="86.0" prefWidth="345.0">
                            <children>
-                              <Button fx:id="loginbtn" mnemonicParsing="false" onAction="#connect" prefHeight="30.0" prefWidth="120.0" styleClass="btn" stylesheets="@Login.css" text="Se Connecter" />
+                              <Button fx:id="loginbtn" mnemonicParsing="false" onAction="#connect" prefHeight="30.0" prefWidth="120.0" styleClass="btn" stylesheets="@Login.css" text="Se Connecter" textFill="WHITE">
+                                 <effect>
+                                    <DropShadow>
+                                       <color>
+                                          <Color red="0.557894766330719" green="0.5558284521102905" blue="0.5558284521102905" />
+                                       </color>
+                                    </DropShadow>
+                                 </effect></Button>
                            </children>
                         </HBox>
                      </children>
