--- a/bin/application/Login.fxml
+++ b/bin/application/Login.fxml
@@ -11,28 +11,27 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.paint.Color?>
-<?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
 <BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" stylesheets="@Login.css" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.LoginController">
    <right>
       <VBox prefHeight="200.0" prefWidth="400.0" stylesheets="@Login.css" BorderPane.alignment="CENTER">
          <children>
-            <Pane prefHeight="94.0" prefWidth="400.0">
+            <Pane prefHeight="128.0" prefWidth="400.0">
                <children>
-                  <HBox alignment="CENTER" prefHeight="94.0" prefWidth="400.0">
+                  <HBox alignment="CENTER" prefHeight="122.0" prefWidth="400.0">
                      <children>
-                        <Text fill="#c6c6c6" strokeType="OUTSIDE" strokeWidth="0.0" text="Login">
-                           <font>
-                              <Font size="30.0" />
-                           </font>
-                        </Text>
+                        <ImageView fitHeight="80.0" fitWidth="80.0">
+                           <image>
+                              <Image url="@../pics/mechanic%20(1).png" />
+                           </image>
+                        </ImageView>
                      </children>
                   </HBox>
                </children></Pane>
-            <HBox alignment="CENTER" prefHeight="254.0" prefWidth="200.0">
+            <HBox alignment="CENTER" prefHeight="288.0" prefWidth="400.0">
                <children>
-                  <Pane prefHeight="254.0" prefWidth="345.0">
+                  <Pane prefHeight="288.0" prefWidth="346.0">
                      <children>
                         <TextField fx:id="username" layoutX="48.0" layoutY="55.0" prefHeight="30.0" prefWidth="250.0" promptText="Nom Utlilisateur" />
                         <PasswordField fx:id="password" layoutX="48.0" layoutY="112.0" prefHeight="30.0" prefWidth="250.0" promptText="Mot de pass" />
@@ -52,7 +51,7 @@
                   </Pane>
                </children>
             </HBox>
-            <Pane prefHeight="150.0" prefWidth="400.0">
+            <Pane prefHeight="121.0" prefWidth="400.0">
                <children>
                   <Text fx:id="serverstats" layoutX="162.0" layoutY="80.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Server is good" />
                   <Button layoutX="14.0" layoutY="30.0" mnemonicParsing="false" onAction="#testquery" prefHeight="25.0" prefWidth="97.0" text="test" />
