--- a/bin/application/parts_dashbord.fxml
+++ b/bin/application/parts_dashbord.fxml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -13,19 +15,29 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.DashbordController">
    <bottom>
       <HBox alignment="CENTER" prefHeight="390.0" prefWidth="930.0" BorderPane.alignment="CENTER">
          <children>
-            <TableView prefHeight="382.0" prefWidth="800.0" stylesheets="@part_style.css">
-              <columns>
-                <TableColumn prefWidth="140.80002290010452" style="-fx-background-color: white;" text="Name" />
-                <TableColumn minWidth="4.000030517578125" prefWidth="149.6000213623047" style="-fx-background-color: white;" text="ID" />
-                  <TableColumn minWidth="4.000030517578125" prefWidth="149.6000213623047" style="-fx-background-color: white;" text="Status" />
-                  <TableColumn minWidth="4.000030517578125" prefWidth="149.6000213623047" style="-fx-background-color: white;" text="quantité" />
-                  <TableColumn minWidth="4.000030517578125" prefWidth="149.6000213623047" style="-fx-background-color: white;" text="C2" />
-              </columns>
-            </TableView>
+            <ScrollPane prefHeight="390.0" prefWidth="800.0">
+              <content>
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="390.0" prefWidth="800.0">
+                     <children>
+                        <TableView prefHeight="390.0" prefWidth="800.0">
+                          <columns>
+                            <TableColumn prefWidth="95.20001369714737" text="C1" />
+                            <TableColumn prefWidth="55.20001220703125" text="C2" />
+                              <TableColumn prefWidth="75.0" text="C2" />
+                              <TableColumn prefWidth="75.0" text="C2" />
+                              <TableColumn prefWidth="75.0" text="C2" />
+                              <TableColumn prefWidth="75.0" text="C2" />
+                              <TableColumn prefWidth="75.0" text="C2" />
+                          </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+              </content>
+            </ScrollPane>
          </children>
       </HBox>
    </bottom>
@@ -50,7 +62,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                <children>
-                  <Text layoutX="14.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin &gt;">
+                  <Text fill="#a1a1a1" layoutX="14.0" layoutY="40.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Admin &gt;">
                      <font>
                         <Font size="25.0" />
                      </font>
@@ -64,7 +76,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Button layoutX="332.0" layoutY="10.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="120.0" styleClass="btn_add" stylesheets="@part_style.css" text="Add">
+                  <Button fx:id="add_btn" layoutX="332.0" layoutY="10.0" mnemonicParsing="false" onAction="#add_parts" prefHeight="40.0" prefWidth="120.0" styleClass="btn_add" stylesheets="@part_style.css" text="Add">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
