--- a/src/application/Dashbord.fxml
+++ b/src/application/Dashbord.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.DashbordController">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1100.0" style="-fx-border-radius: 30; -fx-background-radius: 30;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.DashbordController">
    <left>
       <VBox prefHeight="200.0" prefWidth="170.0" style="-fx-background-radius: 10px;" styleClass="leftmenu" stylesheets="@dashbord_style.css" BorderPane.alignment="CENTER">
          <children>
@@ -51,6 +51,6 @@
       </VBox>
    </left>
    <center>
-      <BorderPane fx:id="container" prefHeight="200.0" prefWidth="200.0" styleClass="container" stylesheets="@dashbord_style.css" BorderPane.alignment="CENTER" />
+      <BorderPane fx:id="container" prefHeight="200.0" prefWidth="200.0" style="-fx-border-radius: 30;" styleClass="container" stylesheets="@dashbord_style.css" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
