i fixed the fxml problem of not loading in ajouter employer and modifier

--- a/bin/application/add_employe_container.fxml
+++ b/bin/application/add_employe_container.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Add_employe_container_controller">
    <center>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -116,7 +116,7 @@
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <children>
                   <Button layoutX="72.0" layoutY="21.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" text="Button" />
-                  <Button layoutX="210.0" layoutY="21.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" text="Ajouter">
+                  <Button fx:id="ajouter_employer" layoutX="210.0" layoutY="21.0" mnemonicParsing="false" onAction="#ajouter_employer" prefHeight="35.0" prefWidth="100.0" text="Ajouter">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
