--- a/bin/application/mod_employe_container.fxml
+++ b/bin/application/mod_employe_container.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -9,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Add_employe_container_controller">
    <center>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -58,7 +59,7 @@
                         <Font size="16.0" />
                      </font>
                   </Text>
-                  <TextField layoutX="90.0" layoutY="23.0" prefHeight="30.0" prefWidth="250.0" />
+                  <TextField fx:id="username_field_mod" layoutX="90.0" layoutY="23.0" prefHeight="30.0" prefWidth="250.0" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
@@ -68,7 +69,7 @@
                         <Font size="16.0" />
                      </font>
                   </Text>
-                  <TextField layoutX="90.0" layoutY="23.0" prefHeight="30.0" prefWidth="250.0" />
+                  <TextField fx:id="name_field_mod" layoutX="90.0" layoutY="23.0" prefHeight="30.0" prefWidth="250.0" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
@@ -78,7 +79,7 @@
                         <Font size="16.0" />
                      </font>
                   </Text>
-                  <TextField layoutX="90.0" layoutY="22.0" prefHeight="30.0" prefWidth="250.0" />
+                  <TextField fx:id="prenom_field_mod" layoutX="90.0" layoutY="22.0" prefHeight="30.0" prefWidth="250.0" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
@@ -88,7 +89,7 @@
                         <Font size="16.0" />
                      </font>
                   </Text>
-                  <TextField layoutX="90.0" layoutY="23.0" prefHeight="30.0" prefWidth="250.0" />
+                  <TextField fx:id="email_field_mod" layoutX="90.0" layoutY="23.0" prefHeight="30.0" prefWidth="250.0" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
@@ -98,7 +99,7 @@
                         <Font size="16.0" />
                      </font>
                   </Text>
-                  <TextField layoutX="90.0" layoutY="23.0" prefHeight="30.0" prefWidth="250.0" />
+                  <TextField fx:id="numero_field_mod" layoutX="90.0" layoutY="23.0" prefHeight="30.0" prefWidth="250.0" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
@@ -108,10 +109,18 @@
                         <Font size="16.0" />
                      </font>
                   </Text>
-                  <TextField layoutX="90.0" layoutY="23.0" prefHeight="30.0" prefWidth="250.0" />
+                  <TextField fx:id="role_field_mod" layoutX="90.0" layoutY="23.0" prefHeight="30.0" prefWidth="250.0" />
                </children>
             </Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
+               <children>
+                  <Button layoutX="84.0" layoutY="20.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" text="Button" />
+                  <Button fx:id="modifier_employer" layoutX="246.0" layoutY="20.0" mnemonicParsing="false" onAction="#modifier_employer" prefHeight="35.0" prefWidth="90.0" text="Modifier">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Button>
+               </children></Pane>
          </children>
       </GridPane>
    </center>
