--- a/bin/application/add_employe_container.fxml
+++ b/bin/application/add_employe_container.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<BorderPane fx:id="add_container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onDragDetected="#return_back" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Add_employe_container_controller">
+<BorderPane fx:id="add_container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onDragDetected="#return_back" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.Add_employe_container_controller">
    <center>
       <GridPane BorderPane.alignment="CENTER">
         <columnConstraints>
@@ -122,7 +122,12 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <children>
-                  <Button fx:id="add_emp" layoutX="172.0" layoutY="25.0" mnemonicParsing="false" onAction="#ajouter_ep" text="Button" />
+                  <Button layoutX="72.0" layoutY="21.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" text="Button" />
+                  <Button fx:id="ajouter_employer" layoutX="210.0" layoutY="21.0" mnemonicParsing="false" onAction="#ajouter_employer" prefHeight="35.0" prefWidth="100.0" text="Ajouter">
+                     <font>
+                        <Font name="System Bold" size="14.0" />
+                     </font>
+                  </Button>
                </children></Pane>
          </children>
       </GridPane>
