--- a/src/application/Viewfxml/parts_dashbord.fxml
+++ b/src/application/Viewfxml/parts_dashbord.fxml
@@ -17,12 +17,8 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<<<<<<< HEAD:bin/application/parts_dashbord.fxml
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.parts_dashbord_controller">
-=======
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.parts_dashbord_controller">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/17.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.parts_dashbord_controller">
 
->>>>>>> origin/master:src/application/Viewfxml/parts_dashbord.fxml
    <bottom>
       <HBox alignment="CENTER" prefHeight="390.0" prefWidth="930.0" BorderPane.alignment="CENTER">
          <children>
@@ -34,12 +30,8 @@
                           <columns>
                               <TableColumn fx:id="id" prefWidth="75.0" text="Id" />
                             <TableColumn fx:id="nom_col" prefWidth="142.0" text="Nom" />
-<<<<<<< HEAD:bin/application/parts_dashbord.fxml
-                            <TableColumn fx:id="desc_col" prefWidth="219.0" text="Description" />
-=======
-<!--                              <TableColumn fx:id="parts_table" prefWidth="219.0" text="Description" />
- --> 
->>>>>>> origin/master:src/application/Viewfxml/parts_dashbord.fxml
+                             <!-- <TableColumn fx:id="parts_table" prefWidth="219.0" text="Description" /> -->
+ 
                               <TableColumn fx:id="quntite_col" prefWidth="88.0" text="Quntite" />
                               <TableColumn fx:id="prix_col" prefWidth="75.0" text="Prix" />
                             <TableColumn fx:id="desc_col" prefWidth="219.0" text="Description" />
