--- a/bin/application/Viewfxml/Rendez_vous_dashbord.fxml
+++ b/bin/application/Viewfxml/Rendez_vous_dashbord.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import io.github.palexdev.materialfx.controls.MFXButton?>
+<?import io.github.palexdev.materialfx.controls.MFXTableColumn?>
+<?import io.github.palexdev.materialfx.controls.MFXTableView?>
+<?import io.github.palexdev.materialfx.controls.MFXTextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.ScrollPane?>
@@ -44,6 +48,7 @@
                <children>
                   <ChoiceBox fx:id="table_list" layoutX="14.0" layoutY="8.0" onMouseReleased="#selected_table" prefWidth="150.0" />
                   <Button fx:id="select_btn" layoutX="181.0" layoutY="8.0" mnemonicParsing="false" onAction="#selected_table" prefHeight="25.0" prefWidth="130.0" text="Selected" />
+                  <MFXButton buttonType="RAISED" layoutX="360.0" layoutY="8.0" styleClass="mfx-button" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
@@ -66,6 +71,11 @@
                   <Button layoutX="143.0" layoutY="8.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="90.0" text="Button" />
                </children>
             </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
+               <children>
+                  <MFXTextField layoutX="87.0" layoutY="-4.0" prefHeight="21.0" prefWidth="258.0" />
+               </children>
+            </Pane>
          </children>
       </GridPane>
    </top>
@@ -76,7 +86,12 @@
                <children>
                   <ScrollPane prefHeight="480.0" prefWidth="900.0">
                     <content>
-                      <AnchorPane fx:id="tables" minHeight="0.0" minWidth="0.0" prefHeight="480.0" prefWidth="900.0" />
+                      <AnchorPane fx:id="tables" minHeight="0.0" minWidth="0.0" prefHeight="480.0" prefWidth="900.0">
+                           <children>
+                              <MFXTableView layoutX="108.0" layoutY="3.0" prefHeight="401.0" prefWidth="438.0" />
+                              <MFXTableColumn layoutX="108.0" layoutY="5.0" prefHeight="9.0" prefWidth="123.0" text="test" />
+                              <MFXTableColumn layoutX="231.0" layoutY="5.0" prefHeight="9.0" prefWidth="123.0" text="test" />
+                           </children></AnchorPane>
                     </content>
                   </ScrollPane>
                </children></Pane>
