--- a/bin/application/Viewfxml/add_employe_style.css
+++ b/bin/application/Viewfxml/add_employe_style.css
@@ -1,11 +1,18 @@
 .btn_add {
   -fx-background-color: "#fac400";
   -fx-text-fill: White;
+  -fx-background-radius: 8px;
+  -fx-background-radius: 8px;
 }
 
 .btn_mod {
-  -fx-background-color: black;
-  -fx-text-fill: White;
+  -fx-background-color: transparent;
+  -fx-text-fill: #454545;
+  /* -fx-background-radius: 8px; */
+  -fx-border-radius: 8px;
+  -fx-background-radius: 8px;
+  -fx-border-color: #454545;
+  -fx-border-width: 1.5px;
 }
 
 .btn_return {
