--- a/bin/application/Viewfxml/tablestyle.css
+++ b/bin/application/Viewfxml/tablestyle.css
@@ -1,3 +1,7 @@
+/* .table-view {
+  -fx-border-style: none;
+}
+
 .table-view .column-header-background .filler {
   -fx-background-color: transparent;
 }
@@ -8,7 +12,7 @@
 
 .table-view .column-header-background {
   -fx-background-color: "#fcefb4";
-  /* -fx-background-color: linear-gradient(to bottom, #dee2e6, #fcefb4); */
+  -fx-background-color: linear-gradient(to bottom, #dee2e6, #fcefb4);
   -fx-background-radius: 10px 10px 0px 0px;
   -fx-background-insets: 0 11px 0 0;
   -fx-padding: 0 0 5px 0;
@@ -37,7 +41,8 @@
   -fx-background-color: #f8f9fa;
   -fx-background-insets: 0, 0 0 1 0;
   -fx-padding: 0em;
-}
+} */
+
 /* 
 .table-view .virtual-flow .scroll-bar:vertical,
 .table-view .virtual-flow .scroll-bar:vertical .track,
@@ -65,3 +70,141 @@
   -fx-background-color: #81c483;
   -fx-background-radius: 15px;
 } */
+
+.table-view {
+  -fx-background-color: #3c4048;
+  -fx-background-radius: 14 14 0 0;
+}
+.table-view .column-header-background {
+  -fx-background-color: #3c4048;
+
+  -fx-background-radius: 14;
+  -fx-background-insets: 0 0 10 0;
+}
+.table-view .column-header,
+.table-view .filler {
+  -fx-size: 35px;
+  -fx-border-width: 0 0 10 0;
+  -fx-background-color: transparent;
+}
+
+.table-view .column-header .label {
+  -fx-text-fill: white;
+}
+
+.table-cell {
+  -fx-text-overrun: ellipsis;
+  /* -fx-pref-height: 20px; */
+  -fx-max-height: 100px;
+
+  -fx-text-wrap: true;
+  -fx-alignment: CENTER;
+}
+
+.table-row-cell:selected {
+  -fx-background-color: #687077;
+}
+
+.table-row-cell {
+  -fx-text-wrap: true;
+  -fx-alignment: CENTER;
+}
+
+.scroll-pane {
+  -fx-background-color: #eaeaea;
+  -fx-background-radius: 5;
+}
+
+.scroll-pane .viewport {
+  -fx-background-color: #eaeaea;
+}
+
+.scroll-pane .content {
+  -fx-background-color: #ffffff;
+  -fx-background-insets: 0;
+}
+
+.scroll-pane:focused .viewport {
+  -fx-background-color: #e5e5e5;
+}
+
+.scroll-pane:focused .content {
+  -fx-background-color: #ffffff;
+}
+
+.scroll-pane .scroll-bar:vertical,
+.scroll-pane .scroll-bar:horizontal {
+  -fx-background-color: #e5e5e5;
+}
+
+.scroll-pane .scroll-bar:vertical .thumb,
+.scroll-pane .scroll-bar:horizontal .thumb {
+  -fx-background-color: #bdbdbd;
+  -fx-background-radius: 5;
+}
+
+.scroll-pane .scroll-bar:vertical .thumb:hover,
+.scroll-pane .scroll-bar:horizontal .thumb:hover {
+  -fx-background-color: #a3a3a3;
+}
+
+.scroll-pane .scroll-bar:vertical .increment-button,
+.scroll-pane .scroll-bar:horizontal .increment-button,
+.scroll-pane .scroll-bar:vertical .decrement-button,
+.scroll-pane .scroll-bar:horizontal .decrement-button {
+  -fx-background-color: transparent;
+}
+
+.scroll-pane .scroll-bar:vertical .increment-button:hover,
+.scroll-pane .scroll-bar:horizontal .increment-button:hover,
+.scroll-pane .scroll-bar:vertical .decrement-button:hover,
+.scroll-pane .scroll-bar:horizontal .decrement-button:hover {
+  -fx-background-color: #e5e5e5;
+  -fx-opacity: 0.5;
+}
+
+.scroll-pane .scroll-bar:vertical .increment-arrow,
+.scroll-pane .scroll-bar:horizontal .increment-arrow,
+.scroll-pane .scroll-bar:vertical .decrement-arrow,
+.scroll-pane .scroll-bar:horizontal .decrement-arrow {
+  -fx-shape: "M 0 0 L 8 4 L 0 8 z";
+  -fx-background-color: #9e9e9e;
+  -fx-padding: 3 4;
+}
+
+.scroll-pane .scroll-bar:vertical .increment-arrow:hover,
+.scroll-pane .scroll-bar:horizontal .increment-arrow:hover,
+.scroll-pane .scroll-bar:vertical .decrement-arrow:hover,
+.scroll-pane .scroll-bar:horizontal .decrement-arrow:hover {
+  -fx-background-color: #a3a3a3;
+}
+
+.scroll-pane .scroll-bar:vertical .track,
+.scroll-pane .scroll-bar:horizontal .track {
+  -fx-background-color: transparent;
+}
+
+.scroll-pane .scroll-bar:vertical .track-background,
+.scroll-pane .scroll-bar:horizontal .track-background {
+  -fx-background-color: #e5e5e5;
+  -fx-background-radius: 5;
+}
+
+.scroll-pane > .scroll-bar:horizontal > .thumb,
+.scroll-pane > .scroll-bar:vertical > .thumb {
+  -fx-background-color: rgba(0, 0, 0, 0.3);
+}
+
+.scroll-pane > .scroll-bar:horizontal > .thumb:hover,
+.scroll-pane > .scroll-bar:vertical > .thumb:hover {
+  -fx-background-color: rgba(0, 0, 0, 0.5);
+}
+
+.scroll-pane > .scroll-bar {
+  -fx-opacity: 0;
+  -fx-transition: opacity 0.5s;
+}
+
+.scroll-pane:hover > .scroll-bar {
+  -fx-opacity: 1;
+}
