--- a/src/application/Viewfxml/ajouter_rdv.fxml
+++ b/src/application/Viewfxml/ajouter_rdv.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:id="add_container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.ajouter_rdv">
    <children>
       <GridPane prefHeight="600.0" prefWidth="930.0">
         <columnConstraints>
@@ -51,7 +50,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <Button layoutX="351.0" layoutY="10.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: #F8F9FA;" text="&lt; Retour">
+                  <Button layoutX="351.0" layoutY="10.0" mnemonicParsing="false" onAction="#retour" prefHeight="35.0" prefWidth="100.0" style="-fx-background-color: #F8F9FA;" text="&lt; Retour">
                      <font>
                         <Font name="System Bold" size="13.0" />
                      </font>
