--- a/src/application/Viewfxml/part_style.css
+++ b/src/application/Viewfxml/part_style.css
@@ -1,17 +1,25 @@
-.table-view {
+/* .table-view {
   -fx-background-color: white;
 }
 
 .table-view .column-header-background .filler {
   -fx-background-color: white;
-}
+} */
 
 .btn_add {
   -fx-background-color: "#fac400";
   -fx-text-fill: White;
+  -fx-background-radius: 8px;
+  -fx-background-radius: 8px;
 }
 
 .btn_mod {
-  -fx-background-color: black;
-  -fx-text-fill: White;
+  /* -fx-background-color: black; */
+  -fx-background-color: transparent;
+  -fx-text-fill: #454545;
+  /* -fx-background-radius: 8px; */
+  -fx-border-radius: 8px;
+  -fx-background-radius: 8px;
+  -fx-border-color: #454545;
+  -fx-border-width: 1.5px;
 }
