--- a/bin/application/Viewfxml/ajouter_rdv.fxml
+++ b/bin/application/Viewfxml/ajouter_rdv.fxml
@@ -77,7 +77,7 @@
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="6">
                <children>
-                  <TextArea fx:id="description" layoutX="58.0" layoutY="12.0" prefHeight="80.0" prefWidth="350.0" promptText="Description" />
+                  <TextArea fx:id="description_in" layoutX="58.0" layoutY="12.0" prefHeight="80.0" prefWidth="350.0" promptText="Description in" />
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="7" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="8">
