--- a/bin/application/Viewfxml/home_dashbord.fxml
+++ b/bin/application/Viewfxml/home_dashbord.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import io.github.palexdev.materialfx.controls.legacy.MFXLegacyTableView?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 
@@ -10,10 +9,6 @@
 
    </center>
    <center>
-      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
-         <children>
-            <MFXLegacyTableView layoutX="14.0" layoutY="7.0" prefHeight="400.0" prefWidth="630.0" />
-         </children>
-      </Pane>
+      <Pane prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER" />
    </center>
 </BorderPane>
