--- a/src/application/Viewfxml/add_employe_container.fxml
+++ b/src/application/Viewfxml/add_employe_container.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -62,73 +63,47 @@
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <TextField fx:id="usernamefield" layoutX="89.0" layoutY="26.0" prefWidth="220.0" styleClass="inpt" stylesheets="@inputs.css" />
-                  <Text layoutX="-49.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom d'utilisateur :">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
+                  <TextField fx:id="usernamefield" layoutX="49.0" layoutY="25.0" prefHeight="30.0" prefWidth="300.0" promptText="Nom d'utilisateur" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <TextField fx:id="namefield" layoutX="89.0" layoutY="26.0" prefWidth="220.0" styleClass="inpt" stylesheets="@inputs.css" />
-                  <Text layoutX="34.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom :">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
+                  <TextField fx:id="namefield" layoutX="49.0" layoutY="25.0" prefHeight="30.0" prefWidth="300.0" promptText="Nom" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <children>
-                  <TextField fx:id="prenomfield" layoutX="89.0" layoutY="26.0" prefWidth="220.0" styleClass="inpt" stylesheets="@inputs.css" />
-                  <Text layoutX="14.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prenom :">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
+                  <TextField fx:id="prenomfield" layoutX="49.0" layoutY="25.0" prefHeight="30.0" prefWidth="300.0" promptText="Prenom" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
-                  <TextField fx:id="numerofield" layoutX="89.0" layoutY="26.0" prefWidth="220.0" styleClass="inpt" stylesheets="@inputs.css" />
-                  <Text layoutX="14.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Numéro :">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
+                  <TextField fx:id="numerofield" layoutX="49.0" layoutY="25.0" prefHeight="30.0" prefWidth="300.0" promptText="Numéro" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
-                  <TextField fx:id="emailfield" layoutX="89.0" layoutY="26.0" prefWidth="220.0" styleClass="inpt" stylesheets="@inputs.css" />
-                  <Text layoutX="27.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email :">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
+                  <TextField fx:id="emailfield" layoutX="49.0" layoutY="25.0" prefHeight="30.0" prefWidth="300.0" promptText="Email" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <children>
-                  <TextField fx:id="rolefield" layoutX="89.0" layoutY="26.0" prefWidth="220.0" styleClass="inpt" stylesheets="@inputs.css" />
-                  <Text layoutX="34.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Role :">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
+                  <TextField fx:id="passworField" layoutX="49.0" layoutY="24.0" prefHeight="30.0" prefWidth="300.0" promptText="Mot de Pass" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <children>
-                  <Button layoutX="72.0" layoutY="21.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" text="Button" />
-                  <Button fx:id="ajouter_employer" layoutX="210.0" layoutY="21.0" mnemonicParsing="false" onAction="#ajouter_employer" prefHeight="35.0" prefWidth="100.0" text="Ajouter">
+                  <ChoiceBox fx:id="role" layoutX="49.0" layoutY="23.0" prefHeight="30.0" prefWidth="300.0" />
+               </children></Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="7">
+               <children>
+                  <Button fx:id="ajouter_employer" layoutX="112.0" layoutY="23.0" mnemonicParsing="false" onAction="#ajouter_employer" prefHeight="30.0" prefWidth="125.0" styleClass="btn_add" stylesheets="@add_employe_style.css" text="Ajouter">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </Button>
-               </children></Pane>
+               </children>
+            </Pane>
          </children>
       </GridPane>
    </center>
