--- a/src/application/Viewfxml/mod_employe_container.fxml
+++ b/src/application/Viewfxml/mod_employe_container.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -54,73 +55,57 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                <children>
-                  <Text layoutX="-51.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom d'utilisateur :">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
-                  <TextField fx:id="username_field_mod" layoutX="90.0" layoutY="23.0" prefHeight="30.0" prefWidth="250.0" styleClass="inpt" stylesheets="@inputs.css" />
+                  <TextField fx:id="username_field_mod" layoutX="65.0" layoutY="23.0" prefHeight="30.0" prefWidth="300.0" promptText="Nom d'utilisateur" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <Text layoutX="33.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Nom :">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
-                  <TextField fx:id="name_field_mod" layoutX="90.0" layoutY="23.0" prefHeight="30.0" prefWidth="250.0" styleClass="inpt" stylesheets="@inputs.css" />
+                  <TextField fx:id="name_field_mod" layoutX="65.0" layoutY="23.0" prefHeight="30.0" prefWidth="300.0" promptText="Nom" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
                <children>
-                  <Text layoutX="14.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Prenom :">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
-                  <TextField fx:id="prenom_field_mod" layoutX="90.0" layoutY="22.0" prefHeight="30.0" prefWidth="250.0" styleClass="inpt" stylesheets="@inputs.css" />
+                  <TextField fx:id="prenom_field_mod" layoutX="65.0" layoutY="23.0" prefHeight="30.0" prefWidth="300.0" promptText="Prenom" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
                <children>
-                  <Text layoutX="36.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Email :">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
-                  <TextField fx:id="email_field_mod" layoutX="90.0" layoutY="23.0" prefHeight="30.0" prefWidth="250.0" styleClass="inpt" stylesheets="@inputs.css" />
+                  <TextField fx:id="email_field_mod" layoutX="65.0" layoutY="23.0" prefHeight="30.0" prefWidth="300.0" promptText="Email" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                <children>
-                  <Text layoutX="14.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Numéro :">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
-                  <TextField fx:id="numero_field_mod" layoutX="90.0" layoutY="23.0" prefHeight="30.0" prefWidth="250.0" styleClass="inpt" stylesheets="@inputs.css" />
+                  <TextField fx:id="numero_field_mod" layoutX="65.0" layoutY="23.0" prefHeight="30.0" prefWidth="300.0" promptText="Numéro " styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                <children>
-                  <Text layoutX="44.0" layoutY="43.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Role :">
-                     <font>
-                        <Font size="16.0" />
-                     </font>
-                  </Text>
-                  <TextField fx:id="role_field_mod" layoutX="90.0" layoutY="23.0" prefHeight="30.0" prefWidth="250.0" styleClass="inpt" stylesheets="@inputs.css" />
+                  <TextField fx:id="password_field_mod" layoutX="65.0" layoutY="23.0" prefHeight="30.0" prefWidth="300.0" promptText="Mot de Pass" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <children>
-                  <Button layoutX="84.0" layoutY="20.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="100.0" text="Button" />
-                  <Button fx:id="modifier_employer" layoutX="246.0" layoutY="20.0" mnemonicParsing="false" onAction="#modifier_employer" prefHeight="35.0" prefWidth="90.0" text="Modifier">
+                  <ChoiceBox fx:id="role_select" layoutX="65.0" layoutY="23.0" prefHeight="30.0" prefWidth="300.0" />
+               </children></Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="7">
+               <children>
+                  <Button fx:id="modifier_employer" layoutX="50.0" layoutY="23.0" mnemonicParsing="false" onAction="#modifier_employer" prefHeight="30.0" prefWidth="125.0" text="Modifier">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Button>
-               </children></Pane>
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="7" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2">
+               <children>
+                  <Button fx:id="retour_btn" layoutX="87.0" layoutY="23.0" mnemonicParsing="false" onAction="#retour" prefHeight="30.0" prefWidth="125.0" style="-fx-background-color: transparent;" text="&lt; Retour">
+                     <font>
+                        <Font name="System Bold" size="13.0" />
+                     </font>
+                  </Button>
+               </children>
+            </Pane>
          </children>
       </GridPane>
    </center>
