--- a/src/application/Viewfxml/rdv_details.fxml
+++ b/src/application/Viewfxml/rdv_details.fxml
@@ -4,14 +4,15 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ContextMenu?>
 <?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Text?>
 
 <Pane fx:id="rdv_container" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="930.0" style="-fx-background-color: #F8F9FA;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.ViewController.Rdv_details">
@@ -55,24 +56,32 @@
                <children>
                   <TextField fx:id="numero_client" layoutX="30.0" layoutY="21.0" prefWidth="250.0" promptText="Numéro" />
                </children></Pane>
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
+               <children>
+                  <Button fx:id="parts_rdv" layoutX="224.0" layoutY="24.0" mnemonicParsing="false" onAction="#add_parts_rdv" prefHeight="30.0" prefWidth="60.0" text="Piece" />
+               </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
+               <children>
+                  <TableView fx:id="listview_part" layoutX="-284.0" layoutY="-67.0" prefHeight="180.0" prefWidth="567.0">
+                    <columns>
+                      <TableColumn fx:id="nom_part_col" minWidth="105.5999755859375" prefWidth="351.1999816894531" text="Nom" />
+                        <TableColumn fx:id="prix_col" minWidth="40.79998779296875" prefWidth="76.0" text="Prix" />
+                      <TableColumn fx:id="quantite_part_col" minWidth="64.0" prefWidth="83.19998168945312" text="Quantité " />
+                        <TableColumn fx:id="action_col" minWidth="40.0" prefWidth="56.799957275390625" text="Action" />
+                    </columns>
+                  </TableView>
+               </children></Pane>
+            <Pane prefHeight="62.0" prefWidth="310.0" GridPane.columnIndex="1" GridPane.rowIndex="8" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="3">
                <children>
-                  <ListView fx:id="listview_part" layoutX="10.0" layoutY="-117.0" prefHeight="180.0" prefWidth="290.0" />
+                  <TextArea fx:id="description_out" layoutX="14.0" layoutY="14.0" prefHeight="125.0" prefWidth="250.0" promptText="Out" />
                </children></Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="4" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="5" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="6" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="7" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
-               <children>
-                  <Line endX="163.0" layoutX="133.0" startX="-126.0" />
-               </children>
-            </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
                   <TextField fx:id="nom_client" layoutX="30.0" layoutY="21.0" prefWidth="250.0" promptText="Nom" />
@@ -81,7 +90,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
                <children>
-                  <DatePicker fx:id="datedebut" layoutX="30.0" layoutY="21.0" prefWidth="250.0" promptText="date debut" />
+                  <DatePicker fx:id="date_debut_rdv" layoutX="30.0" layoutY="21.0" prefWidth="250.0" promptText="date debut" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
@@ -101,7 +110,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="5">
                <children>
-                  <TextField layoutX="27.0" layoutY="21.0" prefHeight="25.0" prefWidth="250.0" promptText="Type de Service" />
+                  <TextField fx:id="service" layoutX="27.0" layoutY="21.0" prefHeight="25.0" prefWidth="250.0" promptText="Type de Service" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="6" />
@@ -114,7 +123,18 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2">
                <children>
-                  <Button fx:id="parts_rdv" layoutX="243.0" layoutY="20.0" mnemonicParsing="false" onAction="#add_parts_rdv" prefHeight="30.0" prefWidth="60.0" text="Piece" />
+                  <Button fx:id="supp_btn" layoutX="196.0" layoutY="19.0" mnemonicParsing="false" onAction="#supp" prefHeight="30.0" prefWidth="100.0" text="Supprimer" />
+               </children>
+            </Pane>
+            <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="1">
+               <children>
+                  <TextArea fx:id="description_in" layoutX="16.0" prefHeight="125.0" prefWidth="250.0" promptText="In" />
+               </children>
+            </Pane>
+            <Pane prefHeight="0.0" prefWidth="310.0" GridPane.columnIndex="2" GridPane.rowIndex="8">
+               <children>
+                  <Button fx:id="fact_tbn" layoutX="196.0" layoutY="19.0" mnemonicParsing="false" onAction="#factur" prefHeight="30.0" prefWidth="100.0" text="facture" />
+                  <Button fx:id="eng_btn" layoutX="14.0" layoutY="19.0" mnemonicParsing="false" onAction="#enregistre" prefHeight="30.0" prefWidth="100.0" text="Enregistre" />
                </children>
             </Pane>
          </children>
