--- a/bin/application/Viewfxml/Rendez_vous_dashbord.fxml
+++ b/bin/application/Viewfxml/Rendez_vous_dashbord.fxml
@@ -43,15 +43,15 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2">
                <children>
-                  <ChoiceBox fx:id="table_list" layoutX="14.0" layoutY="8.0" onMouseReleased="#selected_table" prefWidth="150.0" />
-                  <Button fx:id="select_btn" layoutX="181.0" layoutY="8.0" mnemonicParsing="false" onAction="#selected_table" prefHeight="25.0" prefWidth="130.0" text="Selected" />
+                  <ChoiceBox fx:id="table_list" layoutX="14.0" layoutY="8.0" onMouseReleased="#selected_table" prefWidth="200.0" />
+                  <Button fx:id="select_btn" layoutX="322.0" layoutY="8.0" mnemonicParsing="false" onAction="#selected_table" prefHeight="25.0" prefWidth="130.0" text="Selected" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1">
                <children>
-                  <Button fx:id="ajouter_btn" layoutX="351.0" layoutY="6.0" mnemonicParsing="false" onAction="#rdv_ajouter" prefHeight="30.0" prefWidth="100.0" text="Ajouter">
+                  <Button fx:id="ajouter_btn" layoutX="351.0" layoutY="6.0" mnemonicParsing="false" onAction="#rdv_ajouter" prefHeight="30.0" prefWidth="100.0" styleClass="btn_add" stylesheets="@btn.css" text="Ajouter">
                      <font>
-                        <Font name="System Bold" size="12.0" />
+                        <Font name="System Bold" size="13.0" />
                      </font>
                   </Button>
                   <Button fx:id="mod_btn" layoutX="233.0" layoutY="6.0" mnemonicParsing="false" onAction="#rdv_modifier" prefHeight="30.0" prefWidth="100.0" text="Modifier">
@@ -63,8 +63,7 @@
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="2">
                <children>
-                  <TextField layoutX="251.0" layoutY="8.0" prefHeight="25.0" prefWidth="200.0" promptText="Recherche" />
-                  <Button layoutX="143.0" layoutY="8.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="90.0" text="Button" />
+                  <TextField layoutX="202.0" layoutY="8.0" prefHeight="25.0" prefWidth="250.0" promptText="Recherche" styleClass="inpt" stylesheets="@inputs.css" />
                </children>
             </Pane>
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1">
