--- a/src/application/Viewfxml/modifier_client.fxml
+++ b/src/application/Viewfxml/modifier_client.fxml
@@ -88,7 +88,7 @@
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
             <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
                <children>
-                  <Button fx:id="modifier_client" layoutX="148.0" layoutY="20.0" mnemonicParsing="false" onAction="#modifier_client" prefHeight="35.0" prefWidth="100.0" text="Modifier">
+                  <Button fx:id="modifier_client" layoutX="136.0" layoutY="22.0" mnemonicParsing="false" onAction="#modifier_client" prefHeight="30.0" prefWidth="125.0" styleClass="btn_mod" stylesheets="@btn.css" text="Modifier">
                      <font>
                         <Font name="System Bold" size="14.0" />
                      </font>
